# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysso"
version = "1.0.0"
description = "Reads your AWS sso credentials and retrieves temporary credentials that is then used throw the exporting of `AWS_PROFILE`"
readme = "README.md"
authors = [{ name = "Chiemerie Ezechukwu", email = "50174206+chiemerieezechukwu@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["aws", "sso"]
dependencies = ["questionary >= 1.10.0", "pyperclip >= 1.8.2"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/chiemerieezechukwu/mysso"

[project.scripts]
mysso = "mysso.__main__:main"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
  /(
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | venv
    | buck-out
    | build
    | dist
    | migrations
  )/
'''
